	   corrupted argument lists
	 * fixed call stack reporting when exceptions are raised
	 * updates to address warnings and compile errors with the SunPro
	   compiler
	 * fixed bugs in flexible/extensible type matching support
	 * fixed internal APIs and added supoprt for caching lookup maps from
	   externally-implemented types and type information

2010.02.11: David Nichols
	 * fine-tuned overload patching at parse and runtime to allow for more
	   flexibility and automatic type conversions with partial matches
	 * reimplemented parse type support and fixed bugs in the new
	   implementation 

2010.02.10: David Nichols
	 * width updated object member initialization to allow references to
	   $self
	 * updated recursive reference error messages to provide more
	   information about the recursively-referenced data
	 * implemented partial matches and best match checking; fixed several
	   bugs in variant matching
	 * fixed a bug calculating the return type for the + operator at parse
	   time

2010.02.09: David Nichols
	 * streamlined user variant execution, fixed argument processing for
	   user variants
	 * add class name to overload parse and runtime errors
	 * added type information to math functions
	 * fixed a bug resolving type information with global vars

2010.02.08: David Nichols
	 * fixed illegal private method call detection at parse time,
	   including illegal private copy method calls
	 * fixed illegal runtime private copy method call detection
	 * implemented support for private constructors and catching invalid
	   instantiations with private constructors at parse and run time
	 * fixed a bug in the new design related to unified user/builtin
	   function calling passing references to object members

2010.02.05: David Nichols
	 * API updates to export type information for basic value types to be
	   used in modules
	 * more API updates so type and variant information is accessible in
	   modules
	 * implemented C++ iterators for QoreClass methods
